# LearningWebGPU

./: .gitignore  CMakeLists.txt  README.md  magic_enum.hpp  main.cpp
resources/: shader.wgsl
